[metadata]
name = keystone-playground
summary = Keystone Playground
description-file =
    README.rst

[files]
packages =
    keystoneplayground

[entry_points]
console_scripts =
    keystone-playground-api = keystoneplayground.cmd.api:main
oslo.config.opts =
    keystoneplayground = keystoneplayground.opts:list_opts


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
